tests/positive/pr112_string_param.safe
-- Test: pr112_string_param
-- Description: String formals in mode in are accepted and can round-trip to a String result.
-- Expected: ACCEPT

package pR112_String_Param

   function echo (name : in string) returns string

      return name;


   function greeting returns string

      return echo ("hello");



