tests/negative/neg_string_out_param.safe
-- Test: neg_string_out_param
-- Description: String formals are restricted to mode in in PR11.2.
-- Expected: REJECT unsupported_source_construct

package neg_String_Out_Param

   function set_Name (name : out string)
      return;

